--- a/views/_layouts/main.hbs
+++ b/views/_layouts/main.hbs
@@ -6,6 +6,7 @@
     <title>Quản lý bán hàng - nodejs</title>
         <link rel="stylesheet" type="text/css" href="/assets/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/font-awesome-4.3.0/css/font-awesome.min.css">
+    <link href="/assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
     {{{_sections.css}}}
 </head>
 <body>
@@ -43,6 +44,7 @@
     </div>  
     <script type="text/javascript" src="/assets/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="/assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+
     <script type="text/javascript">
         $('#logoutLink').on('click', function () {
             $('#frmLogout').submit();
