--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,5 +1,283 @@
-{{#section 'title'}}
-    Trang chủ
+{{#section 'title'}} Trang chủ {{/section}}
+{{#section 'css'}}
+    <link href="/assets/css/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/assets/css/bootstrap-social.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/breadcrumbs.css">
+    <link href="/assets/css/docs.css" rel="stylesheet">
 {{/section}}
-
-<h1>Example App: Home</h1>
+{{#section 'js'}}
+    <script type="text/javascript">
+    $(document).ready(function(e) {
+        $('.search-panel .dropdown-menu').find('a').click(function(e) {
+            e.preventDefault();
+            var param = $(this).attr("href").replace("#", "");
+            var concept = $(this).text();
+            $('.search-panel span#search-concept').text(concept);
+            $('.input-group #search-param').val(param);
+        });
+    });
+    </script>
+{{/section}}
+<!-- Slider -->
+<div class="col-md-9">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="/images/c1.png" alt="c1">
+            </div>
+            <div class="item">
+                <img src="/images/c2.png" alt="c2">
+            </div>
+            <div class="item">
+                <img src="/images/c3.png" alt="c3">
+            </div>
+        </div>
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class="row">
+        &nbsp
+    </div>
+    <!-- Top ra giá -->
+    <div class="panel panel-default" style="border-color: #189eff; ">
+        <div class="panel-heading" style=" background: #189eff;">
+            <span class="panel-title">Top ra giá</span>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="span12">
+                    <div class="well" style="padding-bottom: 0;">
+                        <div id="myCarousel1" class="carousel slide">
+                            <!-- Carousel items -->
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <div class="row-fluid">
+                                        {{#each topRaGia1}}
+                                            <div class="col-md-4">
+                                                <div class="thumbnail" style="border-color: #189eff;">
+                                                    <a href="/product/detail/{{madaugia}}"><img src="/Imgs/sp/{{madaugia}}/main_thumbs.jpg" title="{{tensp}}" alt="{{tensp}}" style="max-width:100%;" /></a>
+                                                    <div class="caption" style=" background: #eee;">
+                                                        <h5 style="margin: 0 0; font-weight: bold;">{{tensp}}</h5>
+                                                        <div>
+                                                            <span>Giá hiện tại: </span> {{formatNumber giahientai}}
+                                                            <br/>
+                                                            <span>Lượt đầu giá: </span> {{solandaugia}}
+                                                            <br/>
+                                                            <span>Thời gian còn lại:</span> {{timeRemain tgketthuc}}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        {{/each}}
+                                    </div>
+                                    <!--/row-fluid-->
+                                </div>
+                                <!--/item-->
+                                <div class="item">
+                                    <div class="row-fluid">
+                                        {{#each topRaGia2}}
+                                            <div class="col-md-4">
+                                                <div class="thumbnail" style="border-color: #189eff;">
+                                                    <a href="/product/detail/{{madaugia}}"><img src="/Imgs/sp/{{madaugia}}/main_thumbs.jpg" title="{{tensp}}" alt="{{tensp}}" style="max-width:100%;" /></a>
+                                                    <div class="caption" style=" background: #eee;">
+                                                        <h5 style="margin: 0 0; font-weight: bold;">{{tensp}}</h5>
+                                                        <div>
+                                                            <span>Giá hiện tại: </span> {{formatNumber giahientai}}
+                                                            <br/>
+                                                            <span>Lượt đầu giá: </span> {{solandaugia}}
+                                                            <br/>
+                                                            <span>Thời gian còn lại:</span> {{timeRemain tgketthuc}}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        {{/each}}
+                                    </div>
+                                    <!--/row-fluid-->
+                                </div>
+                                <!--/item-->
+                            </div>
+                            <!--/carousel-inner-->
+                            <a class="left carousel-control" href="#myCarousel1" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#myCarousel1" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <!--/myCarousel-->
+                    </div>
+                    <!--/well-->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Top giá cao -->
+    <div class="panel panel-default" style="border-color: #189eff;">
+        <div class="panel-heading" style="background-color: #189eff;;">
+            <span class="panel-title">Top giá cao</span>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="span12">
+                    <div class="well" style="padding-bottom: 0;">
+                        <div id="myCarousel2" class="carousel slide">
+                            <!-- Carousel items -->
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <div class="row-fluid">
+                                        {{#each topGiaCao1}}
+                                            <div class="col-md-4">
+                                                <div class="thumbnail" style="border-color: #189eff;">
+                                                    <a href="/product/detail/{{madaugia}}"><img src="/Imgs/sp/{{madaugia}}/main_thumbs.jpg" title="{{tensp}}" alt="{{tensp}}" style="max-width:100%;" /></a>
+                                                    <div class="caption" style=" background: #eee;">
+                                                        <h5 style="margin: 0 0; font-weight: bold;">{{tensp}}</h5>
+                                                        <div>
+                                                            <span>Giá hiện tại: </span> {{formatNumber giahientai}}
+                                                            <br/>
+                                                            <span>Lượt đầu giá: </span> {{solandaugia}}
+                                                            <br/>
+                                                            <span>Thời gian còn lại:</span> {{timeRemain tgketthuc}}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        {{/each}}
+                                    </div>
+                                    <!--/row-fluid-->
+                                </div>
+                                <!--/item-->
+                                <div class="item">
+                                    <div class="row-fluid">
+                                        {{#each topGiaCao2}}
+                                            <div class="col-md-4">
+                                                <div class="thumbnail" style="border-color: #189eff;">
+                                                    <a href="/product/detail/{{madaugia}}"><img src="/Imgs/sp/{{madaugia}}/main_thumbs.jpg" title="{{tensp}}" alt="{{tensp}}" style="max-width:100%;" /></a>
+                                                    <div class="caption" style=" background: #eee;">
+                                                        <h5 style="margin: 0 0; font-weight: bold;">{{tensp}}</h5>
+                                                        <div>
+                                                            <span>Giá hiện tại: </span> {{formatNumber giahientai}}
+                                                            <br/>
+                                                            <span>Lượt đầu giá: </span> {{solandaugia}}
+                                                            <br/>
+                                                            <span>Thời gian còn lại:</span> {{timeRemain tgketthuc}}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        {{/each}}
+                                    </div>
+                                    <!--/row-fluid-->
+                                </div>
+                                <!--/item-->
+                            </div>
+                            <!--/carousel-inner-->
+                            <a class="left carousel-control" href="#myCarousel2" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#myCarousel2" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <!--/myCarousel-->
+                    </div>
+                    <!--/well-->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Top sắp kết thúc -->
+    <div class="panel panel-default" style="border-color: #189eff;">
+        <div class="panel-heading" style="background-color: #189eff;;">
+            <span class="panel-title">Sắp kết thúc</span>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="span12">
+                    <div class="well" style="padding-bottom: 0;">
+                        <div id="myCarousel3" class="carousel slide">
+                            <!-- Carousel items -->
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <div class="row-fluid">
+                                        {{#each ganKetThuc1}}
+                                            <div class="col-md-4">
+                                                <div class="thumbnail" style="border-color: #189eff;">
+                                                    <a href="/product/detail/{{madaugia}}"><img src="/Imgs/sp/{{madaugia}}/main_thumbs.jpg" title="{{tensp}}" alt="{{tensp}}" style="max-width:100%;" /></a>
+                                                    <div class="caption" style=" background: #eee;">
+                                                        <h5 style="margin: 0 0; font-weight: bold;">{{tensp}}</h5>
+                                                        <div>
+                                                            <span>Giá hiện tại: </span> {{formatNumber giahientai}}
+                                                            <br/>
+                                                            <span>Lượt đầu giá: </span> {{solandaugia}}
+                                                            <br/>
+                                                            <span>Thời gian còn lại:</span> {{timeRemain tgketthuc}}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        {{/each}}
+                                    </div>
+                                    <!--/row-fluid-->
+                                </div>
+                                <!--/item-->
+                                <div class="item">
+                                    <div class="row-fluid">
+                                        {{#each ganKetThuc2}}
+                                            <div class="col-md-4">
+                                                <div class="thumbnail" style="border-color: #189eff;">
+                                                    <a href="/product/detail/{{madaugia}}"><img src="/Imgs/sp/{{madaugia}}/main_thumbs.jpg" title="{{tensp}}" alt="{{tensp}}" style="max-width:100%;" /></a>
+                                                    <div class="caption" style=" background: #eee;">
+                                                        <h5 style="margin: 0 0; font-weight: bold;">{{tensp}}</h5>
+                                                        <div>
+                                                            <span>Giá hiện tại: </span> {{formatNumber giahientai}}
+                                                            <br/>
+                                                            <span>Lượt đầu giá: </span> {{solandaugia}}
+                                                            <br/>
+                                                            <span>Thời gian còn lại:</span> {{timeRemain tgketthuc}}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        {{/each}}
+                                    </div>
+                                    <!--/row-fluid-->
+                                </div>
+                                <!--/item-->
+                            </div>
+                            <!--/carousel-inner-->
+                            <a class="left carousel-control" href="#myCarousel3" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#myCarousel3" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <!--/myCarousel-->
+                    </div>
+                    <!--/well-->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
