--- a/views/_layouts/main.hbs
+++ b/views/_layouts/main.hbs
@@ -1,55 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản lý bán hàng - nodejs</title>
-        <link rel="stylesheet" type="text/css" href="/assets/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <title>Đấu giá</title>
+    <link rel="stylesheet" type="text/css" href="/assets/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/font-awesome-4.3.0/css/font-awesome.min.css">
     <link href="/assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
-    {{{_sections.css}}}
+    <link rel="stylesheet" type="text/css" href="/assets/css/breadcrumbs.css"> {{{_sections.css}}}
 </head>
+
 <body>
     {{> header this }}
     <form id="frmLogout" method="post" action="/account/logout"></form>
     <div class="container-fluid" style="width: 85%; max-width: none!important; margin-right: auto; margin-left: auto;">
         <div class="row">
-            <!-- Panel left -->
-            <div class="col-md-3">
-                <div class="panel panel-default" style="border-color: #189eff;">
-                    <div class="panel-heading" style="background-color: #189eff;">
-                        <span class="panel-title">Danh mục</span>
-                    </div>
-                    {{> categories this }}
-                </div>
-                <div class="panel panel-default" style="border-color: #189eff;">
-                    <div class="panel-heading" style="background-color: #189eff;">
-                        <span class="panel-title">Từ khóa phổ biến</span>
-                    </div>
-                    <div class="list-group">
-                        <a href="#" class="list-group-item">Iphone 7</a>
-                        <a href="#" class="list-group-item">Laptop</a>
-                        <a href="#" class="list-group-item">Tai nghe bluetooth</a>
-                        <a href="#" class="list-group-item">Oppo</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Panel left -->
-
             {{{body}}}
         </div>
-         <footer>
+        <footer>
             <p>&copy; {{now}} - nodejs</p>
         </footer>
-    </div>  
+    </div>
     <script type="text/javascript" src="/assets/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="/assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-
     <script type="text/javascript">
-        $('#logoutLink').on('click', function () {
-            $('#frmLogout').submit();
+    $('#logoutLink').on('click', function() {
+        $('#frmLogout').submit();
+    });
+    $(document).ready(function(e) {
+        $('.search-panel .dropdown-menu').find('a').click(function(e) {
+            e.preventDefault();
+            var param = $(this).attr("href").replace("#", "");
+            var concept = $(this).text();
+            $('.search-panel span#search-concept').text(concept);
+            $('.input-group #search-param').val(param);
         });
+    });
+
     </script>
     {{{_sections.js}}}
 </body>
+
 </html>
